Fixing random scrollbars appearing in video controls

--- a/Frontend/src/EditView.less
+++ b/Frontend/src/EditView.less
@@ -16,7 +16,7 @@
 		height: 100%;
 		display: inline-block;
 
-		> .first-view {
+		div {
 			overflow: hidden;
 		}
 	}
